objects/IMX_Contract__c.object
<CustomObject>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Embedded resource</fullName>
                </value>
                <value>
                    <fullName>Live</fullName>
                </value>
                <value>
                    <fullName>Predict</fullName>
                </value>
                <value>
                    <fullName>Theatre</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RCM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RCM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <inlineHelpText>Geographic region covered by contract. This should only be populated if the account has multiple contracts for different regions</inlineHelpText>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Date__c</fullName>
        <inlineHelpText>Date by which the contract must be physically renewed</inlineHelpText>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Status__c</fullName>
        <label>Renewal Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed Term</fullName>
                </value>
                <value>
                    <fullName>Option Year</fullName>
                </value>
                <value>
                    <fullName>Auto-Renew (Month-to-Month)</fullName>
                </value>
                <value>
                    <fullName>Auto-Renew (Year-to-Year)</fullName>
                </value>
                <value>
                    <fullName>Auto-Renew (Other)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retune_Conditions__c</fullName>
        <inlineHelpText>Whether additional work is chargeable, s&amp;m processes conditions apply etc. Also any dependence on embedded resource agreements</inlineHelpText>
        <label>Retune Conditions</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Road_Tunes_months__c</fullName>
        <inlineHelpText>Frequency of included road network retunes in months</inlineHelpText>
        <label>Road Tunes (months)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rollover_End_Date__c</fullName>
        <label>Rollover End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBE_DBE_Set_Aside__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SBE/DBE Set Aside</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Levels__c</fullName>
        <label>Service Levels</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SLAs: Standard</fullName>
                </value>
                <value>
                    <fullName>SLAs: Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sim_Tunes_months__c</fullName>
        <inlineHelpText>Frequency of included simulation retunes in months</inlineHelpText>
        <label>Sim Tunes (months)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <label>Solution</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Solutions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_Code_Escrow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Source Code Escrow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Terms_Details__c</fullName>
        <label>Special Terms (Details)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Special_Terms__c</fullName>
        <inlineHelpText>Liquidated Damages
Pricing (escalation formula, volume discounting, schedule pricing, etc.)
Transition Requirements (free text)
General</inlineHelpText>
        <label>Special Terms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Liquidated Damages</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>Transition Requirements</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Implementing</fullName>
                    <default>true</default>
                    <label>Implementing</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Current Contract</fullName>
                </value>
                <value>
                    <fullName>Contract Expired</fullName>
                </value>
                <value>
                    <fullName>Terminated by Client</fullName>
                </value>
                <value>
                    <fullName>Terminated by IMX</fullName>
                    <label>Terminated by R1/IMX</label>
                </value>
                <value>
                    <fullName>To be Deleted</fullName>
                </value>
                <value>
                    <fullName>Unknown Status</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscription_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate YES, by checking this box</description>
        <inlineHelpText>Indicate YES, by checking this box</inlineHelpText>
        <label>Subscription Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Support_Start_Date__c</fullName>
        <inlineHelpText>Delivery date of final release, or go live date (which one is used depends on the terms of the contract, but it's usually the delivery date). First day of work for embedded resource agreements</inlineHelpText>
        <label>Support Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tax_Percent__c</fullName>
        <inlineHelpText>Percentage tax to be added to support and maintenance invoices (GST, VAT etc)</inlineHelpText>
        <label>Tax Percent</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Termination_Letter_Date__c</fullName>
        <label>Termination Letter Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transport_Type__c</fullName>
        <label>Transport Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Emergency</fullName>
                </value>
                <value>
                    <fullName>Interfacility</fullName>
                </value>
                <value>
                    <fullName>Non-Emergency</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>iStream_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate YES, by checking this box</description>
        <inlineHelpText>Indicate YES, by checking this box</inlineHelpText>
        <label>iStream Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>of_Billable_Providers_OBB__c</fullName>
        <label># of Billable Providers</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>of_Billable_Users_OBB__c</fullName>
        <label># of Billable Users</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>of_Renewal_Years__c</fullName>
        <description>If applicable, indicate the number of years the contract is renewable.  Do not adjust after the renewal is used.  If the renewal has been executed, update the Current Contract Expiration date.  This provides details of the contract term.</description>
        <inlineHelpText>If applicable, indicate the number of years the contract is renewable.  Do not adjust after the renewal is used.  If the renewal has been executed, create a Renewal Record by clicking "New Contract Renewal".  The New contract end date will be used.</inlineHelpText>
        <label># of Renewal Years</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Contract</label>
    <listViews>
        <fullName>EMS_Active_Contracts</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>Contract_Start_Date__c</columns>
        <columns>Contract_Term_Months__c</columns>
        <columns>Current_Contract_Expiration_Date__c</columns>
        <columns>Contract_Expires_On__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active,Current Contract</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>IMX_Contract__c.EMS_Contract</value>
        </filters>
        <label>EMS Active Contracts</label>
    </listViews>
    <listViews>
        <fullName>EMS_Active_Contracts_Renewing_Within_90</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Contract_Start_Date__c</columns>
        <columns>Current_Contract_Expiration_Date__c</columns>
        <columns>Evergreen_Contract__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>IMX_Contract__c.EMS_Contract</value>
        </filters>
        <filters>
            <field>Current_Contract_Expiration_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>NEXT_N_DAYS:120</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active,Current Contract</value>
        </filters>
        <label>EMS Active Contracts Renewing in 120</label>
    </listViews>
    <listViews>
        <fullName>EMS_Active_Contracts_without_status</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>EMS_Contract_Status__c</columns>
        <columns>Contract_Start_Date__c</columns>
        <columns>Support_Start_Date__c</columns>
        <columns>Cancel_Date__c</columns>
        <columns>Contract_End_Date_calc__c</columns>
        <columns>Contract_Term_Months__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EMS_Contract_Status__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>IMX_Contract__c.EMS_Contract</value>
        </filters>
        <label>EMS Contracts without status</label>
    </listViews>
    <listViews>
        <fullName>HB_Active_Contracts</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>Contract_Start_Date__c</columns>
        <columns>Contract_Term_Months__c</columns>
        <columns>Contract_End_Date_calc__c</columns>
        <columns>Contract_Expires_On__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>IMX_Contract__c.HB_Contract</value>
        </filters>
        <label>HB Active Contracts</label>
    </listViews>
    <listViews>
        <fullName>OBB_Contracts_All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>Contract_Start_Date__c</columns>
        <columns>Contract_Term_Months__c</columns>
        <columns>Contract_End_Date_calc__c</columns>
        <columns>Contract_Expires_On__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>IMX_Contract__c.OBB_Contract</value>
        </filters>
        <label>OBB Contracts (All)</label>
    </listViews>
    <listViews>
        <fullName>OBB_Contracts_Created_This_Week</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Contract_Start_Date__c</columns>
        <columns>Support_Start_Date__c</columns>
        <columns>Cancel_Date__c</columns>
        <columns>Contract_End_Date_calc__c</columns>
        <columns>Contract_Term_Months__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>IMX_Contract__c.OBB_Contract</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>OBB Contracts Created This Week</label>
    </listViews>
    <listViews>
        <fullName>Optima_Cancelled_Contracts</fullName>
        <columns>NAME</columns>
        <columns>Optima_Customer_Code__c</columns>
        <columns>Product__c</columns>
        <columns>Region__c</columns>
        <columns>Status__c</columns>
        <columns>Contract_Start_Date__c</columns>
        <columns>Support_Start_Date__c</columns>
        <columns>Cancel_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>contains</operation>
            <value>Cancelled</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>IMX_Contract__c.Optima_Contract</value>
        </filters>
        <label>Optima Cancelled Contracts</label>
        <sharedTo>
            <group>Optima_Support</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Optima_Current_Contracts</fullName>
        <columns>NAME</columns>
        <columns>Optima_Customer_Code__c</columns>
        <columns>Product__c</columns>
        <columns>Region__c</columns>
        <columns>Status__c</columns>
        <columns>Contract_Start_Date__c</columns>
        <columns>Support_Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>contains</operation>
            <value>Implementing,Active</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>IMX_Contract__c.Optima_Contract</value>
        </filters>
        <label>Optima Current Contracts</label>
        <sharedTo>
            <group>Optima_Support</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Optima_Support_Contracts</fullName>
        <columns>NAME</columns>
        <columns>Optima_Customer_Code__c</columns>
        <columns>Product__c</columns>
        <columns>Region__c</columns>
        <columns>Status__c</columns>
        <columns>Contract_Start_Date__c</columns>
        <columns>Support_Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>IMX_Contract__c.Optima_Contract</value>
        </filters>
        <label>Optima Support Contracts</label>
        <sharedTo>
            <group>Optima_Support</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PASContracts_All</fullName>
        <columns>NAME</columns>
        <columns>Facility_Code__c</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>Contract_Start_Date__c</columns>
        <columns>Contract_Term_Months__c</columns>
        <columns>Contract_End_Date_calc__c</columns>
        <columns>Contract_Expires_On__c</columns>
        <columns>Evergreen_Contract__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>IMX_Contract__c.PAS_Contract</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Current Contract</value>
        </filters>
        <label>PASContracts (All)</label>
    </listViews>
    <listViews>
        <fullName>X0contractquery</fullName>
        <columns>NAME</columns>
        <columns>Contract_Expires_On__c</columns>
        <columns>Account__c</columns>
        <columns>Contract_Start_Date__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Contract Expired</value>
        </filters>
        <label>0contractquery</label>
        <sharedTo>
            <group>System_Admins</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>Contract Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contracts</pluralLabel>
    <recordTypes>
        <fullName>EMS_Contract</fullName>
        <active>true</active>
        <label>EMS Contract</label>
    </recordTypes>
    <recordTypes>
        <fullName>ENT_Contract</fullName>
        <active>true</active>
        <label>ENT Contract</label>
    </recordTypes>
    <recordTypes>
        <fullName>HB_Contract</fullName>
        <active>true</active>
        <label>HB Contract</label>
    </recordTypes>
    <recordTypes>
        <fullName>OBB_Contract</fullName>
        <active>true</active>
        <label>OBB Contract</label>
    </recordTypes>
    <recordTypes>
        <fullName>Optima_Contract</fullName>
        <active>true</active>
        <label>Optima Contract</label>
    </recordTypes>
    <recordTypes>
        <fullName>PAS_Contract</fullName>
        <active>true</active>
        <label>PAS Contract</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Annual_cond_required_with_contract_start</fullName>
        <active>true</active>
        <errorConditionFormula>and(ISBLANK(text(  Annual_Increase_Conditions__c )),not(ISBLANK( Contract_Start_Date__c )), RecordType.Name = "Optima Contract" )</errorConditionFormula>
        <errorDisplayField>Annual_Increase_Conditions__c</errorDisplayField>
        <errorMessage>Annual increase conditions is required when there is a contract start date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cancel_date_reqd_with_cancel_status</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Status__c,"Cancelled"),ISNULL(Cancel_Date__c),RecordType.Name = "Optima Contract")</errorConditionFormula>
        <errorDisplayField>Cancel_Date__c</errorDisplayField>
        <errorMessage>Cancel date must be entered when status is Cancelled</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contract_NOPP_Fee</fullName>
        <active>true</active>
        <description>If the NOPP Sent is "by Intermedix" then make sure NOPP Fee is completed</description>
        <errorConditionFormula>AND(TEXT( NOPP_Sent__c )="by Intermedix",
  ISNULL(NOPP_Fee__c  ))</errorConditionFormula>
        <errorDisplayField>NOPP_Fee__c</errorDisplayField>
        <errorMessage>If the NOPP Sent is "by Intermedix" then make sure NOPP Fee is completed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contract_Patient_Survey_Fee</fullName>
        <active>true</active>
        <description>If the Patient Survey Mailed is "by Intermedix" then make sure Patient Survey Fee is completed</description>
        <errorConditionFormula>AND(TEXT(  Patient_Survey_Mailed__c  )="by Intermedix",
  ISNULL( Patient_Survey_Fee__c   ))</errorConditionFormula>
        <errorDisplayField>Patient_Survey_Fee__c</errorDisplayField>
        <errorMessage>If the Patient Survey Mailed is "by Intermedix" then make sure Patient Survey Fee is completed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Fixed_fees_required_with_contract_start</fullName>
        <active>true</active>
        <errorConditionFormula>and(ISBLANK( Fixed_Fees_yr__c ),not(ISBLANK( Contract_Start_Date__c )),RecordType.Name = "Optima Contract" )</errorConditionFormula>
        <errorDisplayField>Fixed_Fees_yr__c</errorDisplayField>
        <errorMessage>Fixed fee years is required when there is a contract start date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Hourly_cond_required_with_contract_start</fullName>
        <active>true</active>
        <errorConditionFormula>and(ISBLANK(text(  Hourly_Increase_Conditions__c )),not(ISBLANK( Contract_Start_Date__c )),RecordType.Name = "Optima Contract" )</errorConditionFormula>
        <errorDisplayField>Hourly_Increase_Conditions__c</errorDisplayField>
        <errorMessage>Hourly increase conditions is required when there is a contract start date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invoices_required_with_contract_start</fullName>
        <active>true</active>
        <errorConditionFormula>and(ISBLANK( Invoices__c ),not(ISBLANK( Contract_Start_Date__c )),RecordType.Name = "Optima Contract" )</errorConditionFormula>
        <errorDisplayField>Invoices__c</errorDisplayField>
        <errorMessage>Number of invoices is required when there is a contract start date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>New_status_reqd_with_cancel_date</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT ISPICKVAL(Status__c,"Cancelled"),not ISNULL(Cancel_Date__c),RecordType.Name = "Optima Contract")</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Status must be Cancelled when cancel date is entered</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>New_status_reqd_with_support_start_date</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Status__c,"Implementing"),not ISNULL(Support_Start_Date__c),RecordType.Name = "Optima Contract")</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Status must not be Implementing when support start date is entered</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PO_expiry_required_with_this_PO_Status</fullName>
        <active>true</active>
        <errorConditionFormula>and(ISBLANK(PO_Expiry__c),not(ISPICKVAL(PO_Status__c, "Not required")),RecordType.Name = "Optima Contract" )</errorConditionFormula>
        <errorDisplayField>PO_Expiry__c</errorDisplayField>
        <errorMessage>Purchase order expiry must be entered unless status is Not required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PO_process_required_with_this_PO_Status</fullName>
        <active>true</active>
        <errorConditionFormula>and(ISBLANK(PO_Process__c),ISPICKVAL(PO_Status__c, "Required"),RecordType.Name = "Optima Contract" )</errorConditionFormula>
        <errorDisplayField>PO_Process__c</errorDisplayField>
        <errorMessage>Purchase order process must be entered when status is Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Renewal_and_expiry_not_for_auto_renew</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Auto_Renew__c = True, OR(NOT(ISNULL(Renewal_Date__c)), NOT(ISNULL( Expiry_Date__c))), RecordType.Name = "Optima Contract")</errorConditionFormula>
        <errorDisplayField>Renewal_Date__c</errorDisplayField>
        <errorMessage>Renewal date and expiry date must not be set for auto-renew contracts</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Renewal_before_expiry</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISNULL(Renewal_Date__c)), NOT(ISNULL( Expiry_Date__c)), Renewal_Date__c &gt;= Expiry_Date__c, RecordType.Name = "Optima Contract")</errorConditionFormula>
        <errorDisplayField>Renewal_Date__c</errorDisplayField>
        <errorMessage>If entered, renewal date must be before expiry date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Renewal_or_expiry_reqd_non_auto_renew</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Auto_Renew__c = False, ISNULL(Renewal_Date__c), ISNULL( Expiry_Date__c), RecordType.Name = "Optima Contract")</errorConditionFormula>
        <errorDisplayField>Renewal_Date__c</errorDisplayField>
        <errorMessage>At least one of renewal date or expiry date must be set for contracts that don't auto-renew</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Retune_conditions_required_with_sim_tune</fullName>
        <active>true</active>
        <description>Retune conditions must be populated when sim tunes are included</description>
        <errorConditionFormula>and(not ISBLANK(Sim_Tunes_months__c), Sim_Tunes_months__c != 0,ISBLANK(Retune_Conditions__c), RecordType.Name = "Optima Contract")</errorConditionFormula>
        <errorDisplayField>Retune_Conditions__c</errorDisplayField>
        <errorMessage>Retune conditions must be populated when sim tunes are included</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Road_tunes_less_than_sim_tunes</fullName>
        <active>true</active>
        <description>Road retune frequency must be less than or equal to sim tune frequency</description>
        <errorConditionFormula>and(Road_Tunes_months__c &gt; Sim_Tunes_months__c, RecordType.Name = "Optima Contract" )</errorConditionFormula>
        <errorDisplayField>Road_Tunes_months__c</errorDisplayField>
        <errorMessage>Road retune frequency must be less than or equal to sim retune frequency</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Road_tunes_only_for_Predict_Live</fullName>
        <active>true</active>
        <description>Road retune frequency can only be set for Predict and Live contracts</description>
        <errorConditionFormula>and(not ISBLANK( Road_Tunes_months__c), Road_Tunes_months__c != 0,not ISPICKVAL( Product__c , "Predict"),not ISPICKVAL( Product__c , "Live"), RecordType.Name = "Optima Contract" )</errorConditionFormula>
        <errorDisplayField>Road_Tunes_months__c</errorDisplayField>
        <errorMessage>Road retune frequency can only be set for Predict and Live contracts</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Road_tunes_reqd_with_sim_tunes</fullName>
        <active>true</active>
        <description>Road retune frequency must be set if sim retune frequency is</description>
        <errorConditionFormula>and(ISBLANK(Road_Tunes_months__c), Sim_Tunes_months__c &gt; 0, RecordType.Name = "Optima Contract" )</errorConditionFormula>
        <errorDisplayField>Road_Tunes_months__c</errorDisplayField>
        <errorMessage>Road retune frequency must be set if sim retune frequency is positive</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sim_tunes_only_for_Predict</fullName>
        <active>true</active>
        <description>Simulation retune frequency can only be set for Predict contracts</description>
        <errorConditionFormula>and(not ISBLANK( Sim_Tunes_months__c), Sim_Tunes_months__c != 0,not ISPICKVAL( Product__c , "Predict"), RecordType.Name = "Optima Contract" )</errorConditionFormula>
        <errorDisplayField>Sim_Tunes_months__c</errorDisplayField>
        <errorMessage>Simulation retune frequency can only be set for Predict contracts</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Support_start_date_required_for_active_c</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Status__c,"Active"),ISNULL(Support_Start_Date__c),RecordType.Name = "Optima Contract")</errorConditionFormula>
        <errorDisplayField>Support_Start_Date__c</errorDisplayField>
        <errorMessage>Support start date must be entered when status is Active</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Tunes_not_zero</fullName>
        <active>true</active>
        <description>Road and sim retune frequency mustn't be zero (but can be blank)</description>
        <errorConditionFormula>and(or(Road_Tunes_months__c=0, Sim_Tunes_months__c=0), RecordType.Name = "Optima Contract" )</errorConditionFormula>
        <errorDisplayField>Road_Tunes_months__c</errorDisplayField>
        <errorMessage>Road and sim retune frequency must not be zero (but can be left blank)</errorMessage>
    </validationRules>
</CustomObject>